Expand the documentation of g_type_get_qdata()

https://bugzilla.gnome.org/show_bug.cgi?id=613269